--- a/notes/introduction.tex
+++ b/notes/introduction.tex
@@ -9,3 +9,8 @@ We're trying to simultaneously
     \item amortize inference
 \end{itemize}
 in a way that doesn't require the reparameterization trick~\citep{kingma2014auto,rezende2014stochastic} and can deal with discrete latent variables~\citep{rolfe2017discrete}.
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "notes"
+%%% End:
