--- a/notes/notes.bib
+++ b/notes/notes.bib
@@ -1,20 +1,20 @@
 @inproceedings{kingma2014auto,
-  title = {Auto-Encoding Variational Bayes},
-  author = {Kingma, Diederik P and Welling, Max},
-  booktitle = {Proceedings of the 2nd International Conference on Learning Representations (ICLR)},
-  year = {2014}
+  title        = {Auto-Encoding Variational Bayes},
+  author       = {Kingma, Diederik P and Welling, Max},
+  booktitle    = {Proceedings of the 2nd International Conference on Learning Representations (ICLR)},
+  year         = 2014
 }
 
 @inproceedings{rezende2014stochastic,
-  title={Stochastic backpropagation and approximate inference in deep generative models},
-  author={Rezende, Danilo Jimenez and Mohamed, Shakir and Wierstra, Daan},
-  booktitle={International Conference on Machine Learning},
-  year={2014}
+  title        = {Stochastic backpropagation and approximate inference in deep generative models},
+  author       = {Rezende, Danilo Jimenez and Mohamed, Shakir and Wierstra, Daan},
+  booktitle    = {International Conference on Machine Learning},
+  year         = 2014
 }
 
 @inproceedings{rolfe2017discrete,
-  title = {Discrete Variational Autoencoders},
-  author = {Rolfe, Jason Tyler},
-  booktitle = {Proceedings of the 2nd International Conference on Learning Representations (ICLR)},
-  year = {2017}
+  title        = {Discrete Variational Autoencoders},
+  author       = {Rolfe, Jason Tyler},
+  booktitle    = {Proceedings of the 2nd International Conference on Learning Representations (ICLR)},
+  year         = 2017
 }
