--- a/notes/algorithm.tex
+++ b/notes/algorithm.tex
@@ -13,7 +13,7 @@ Given a set of unsupervised training data $(y^{(n)})_{n = 1}^N$ drawn from the t
 \end{itemize}
 where $d(\cdot, \cdot)$ is some distance between distributions.
 
-We propose a two-step algorithm shown in Algorithm~\ref{alg:algorithm/cdae} which we call the \gls{CDAE}.
+We propose a two-step algorithm shown in \cref{alg:algorithm/cdae} which we call the \gls{CDAE}.
 \begin{algorithm}
   \KwData{data $(y^{(n)})_{n = 1}^N$, generative model $p_{\theta}$, inference network $q_{\phi}$}
   \KwResult{learned parameters $\theta, \phi$}
