idealized elbo surface

--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -55,6 +55,12 @@
 \input{algorithm}
 \input{motivation}
 
+\begin{figure}
+    \centering
+    \includegraphics{figures/elbo}
+    \caption{Idealized \gls{ELBO} surface.}
+\end{figure}
+
 \bibliography{notes}
 \end{document}
 
