elbo graph with arrows

--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -61,6 +61,12 @@
     \caption{Idealized \gls{ELBO} surface.}
 \end{figure}
 
+\begin{figure}
+    \centering
+    \includegraphics{figures/elbo2}
+    \caption{Idealized \gls{ELBO} surface with arrows.}
+\end{figure}
+
 \bibliography{notes}
 \end{document}
 
