--- a/notes/motivation.tex
+++ b/notes/motivation.tex
@@ -2,7 +2,7 @@
 \section{Objective - Motivation}
 \label{sec:mot}
 
-How do we arrive at our objective?
+Why co-ordinate descent?
 %
 Consider first the expressions for the lower and upper bounds of the
 log-marginal likelihood:
@@ -23,6 +23,10 @@ The objective with these expressions is to learn the generative model
 parameters~\(\theta\) that maximise the log-marginal likelihood or evidence.
 %
 \[\argmax_{\theta} \log \p[\theta]{y} \]
+
+\todo[inline]{Transcribe remainder of objective from whiteboard sessions}
+
+\todo[inline]{What is the right objective to pursue: \(U - L\) or \(U \text{and } L\) alternating?}
 
 %%% Local Variables:
 %%% mode: latex
