--- a/notes/introduction.tex
+++ b/notes/introduction.tex
@@ -10,6 +10,8 @@ We're trying to simultaneously
 \end{itemize}
 in a way that doesn't require the reparameterization trick~\citep{kingma2014auto,rezende2014stochastic} and can deal with discrete latent variables~\citep{rolfe2017discrete}.
 
+\todo[inline]{Argument to be made for better estimation of true data distribution.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "notes"
