add: another todo

--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -67,6 +67,7 @@
     \centering
     \includegraphics{figures/elbo}
     \caption{Idealized \gls{ELBO} surface.}
+    \todo[inline]{How is~\(\theta^*\) different from \(\theta^{\text{true}}\)?}
 \end{figure}
 
 \begin{figure}
