--- a/notes/algorithm.tex
+++ b/notes/algorithm.tex
@@ -31,20 +31,20 @@ We propose a two-step algorithm shown in \cref{alg:algorithm/cdae} which we call
         \For{some number of iterations}{
             Sample $y^{(n)}$ from the dataset $(y^{(n)})_{n = 1}^N$. \\
             Sample $x \sim q_{\phi}(x \given y^{(n)})$. \\
-            Calculate the gradient $\nabla_{\theta} p_{\theta}(x, y^{(n)})$. \\
+            Calculate the gradient $\nabla_{\theta} [\log p_{\theta}(x, y^{(n)})]$. \\
             Update $\theta$.
         }
         Step 2. Optimize $\phi$: \\
         \begin{align}
             \minimize_{\phi} \left\{
                 \int p_{\theta}(y) \KL{p_{\theta}(x \given y)}{q_{\phi}(x \given y)} \,\mathrm dy
-                = \int \int p_{\theta}(x, y) q_{\phi}(x \given y) \,\mathrm dx \,\mathrm dy + \text{const.}
+                = \int \int p_{\theta}(x, y) \left[-\log q_{\phi}(x \given y)\right] \,\mathrm dx \,\mathrm dy + \text{const.}
             \right\}
         \end{align}
         by performing \gls{SGD}: \\
         \For{some number of iterations}{
             Sample $(x^m, y^m) \sim p_{\theta}(x, y)$. \\
-            Calculate the gradient $\nabla_{\phi} q_{\phi}(x^m \given y^m)$. \\
+            Calculate the gradient $\nabla_{\phi} [-\log q_{\phi}(x^m \given y^m)]$. \\
             Update $\phi$.
         }
     }
