gmm open universe plots

--- a/paper/icml2018/main.tex
+++ b/paper/icml2018/main.tex
@@ -93,17 +93,27 @@
 
 \section{Background}
 
+\subsection{Inference Compilation}
+\subsection{Variational Autoencoders}
+\subsection{Wake-Sleep}
+
 \section{Wake-Sleep for Probabilistic Programming}
 
+\subsection{Algorithm}
+\subsection{Architecture}
+\subsection{No Need for Reparameterization}
+
 \section{Experiments}
+\subsection{Gaussian Mixture}
 \begin{figure*}[!htb]
     \includegraphics{figures/gmm-open-universe/gmm_open_universe_inference.pdf}
 \end{figure*}
 
-
 \begin{figure}[!htb]
     \includegraphics{figures/gmm-open-universe/gmm_open_universe_model_param_and_loss.pdf}
 \end{figure}
+
+\section{Discussion}
 
 
 \bibliography{main}
