--- a/paper/icml2018/main.tex
+++ b/paper/icml2018/main.tex
@@ -21,6 +21,10 @@
 % If accepted, instead use the following line for the camera-ready submission:
 %\usepackage[accepted]{icml2018}
 
+% Custom packages
+\usepackage{mathtools}
+\usepackage{amssymb}
+
 % The \icmltitle you define below is probably too long as a header.
 % Therefore, a short form for the running title is supplied here:
 \icmltitlerunning{Wake-Sleep for Probabilistic Programming}
@@ -112,6 +116,41 @@
 \begin{figure}[!htb]
     \includegraphics{figures/gmm-open-universe/gmm_open_universe_model_param_and_loss.pdf}
 \end{figure}
+
+\subsection{Fly-vs-Fly Dataset}
+The Fly-vs-Fly dataset~\citep{eyjolfsdottir2014detecting} contains annotated tracks of pairs of fruit flies interacting.
+
+Given a time series $y_{1:T}$ where $y_t \in \mathbb R^{d_y}$ and $y_t^{\text{pos}} = (y_{t, 1}, y_{t, 2})$, we posit a generative model with $F$ flies and $A$ actions as follows.
+\begin{itemize}
+    \item For $f$ in $\{1, \dotsc, F\}$:
+    \begin{align}
+        a_{1, f} &\sim \mathrm{Uniform}(\{1, \dotsc, A\}) \\
+        x_{1, f} &\sim \mathrm{Normal}(\mu_{x_1}, \Sigma_{x_1}) \\
+        s_{1, f} &\sim \mathrm{Normal}(\mu_{s_1}, \Sigma_{s_1}) \\
+        y_{1, f}^{\text{pos}} &\sim \mathrm{Normal}(x_{1, f}, \Sigma_{\text{pos}}) \\
+        \mathrm{Enc}(f, y_{1, 1:F}) &\sim \prod_{k = 1}^K \mathrm{Bernoulli}(\eta_k(s_{1, f}))
+    \end{align}
+    \item For $t$ in $\{2, \dotsc, T\}$:
+    \begin{itemize}
+        \item For $f$ in $\{1, \dotsc, F\}$:
+        \begin{align}
+            a_{t, f} &\sim \mathrm{Categorical}(\pi_{a_{t - 1, f}}^a(s_{t, f})) \\
+            x_{t, f} &\sim \mathrm{Normal}(\pi_{a_{t - 1, f}}^x, \Sigma_x) \\
+            s_{t, f} &\sim \mathrm{Normal}(\pi_{a_{t - 1, f}}^s, \Sigma_s) \\
+            y_{t, f}^{\text{pos}} &\sim \mathrm{Normal}(x_{t, f}, \Sigma_{\text{pos}}) \\
+            \mathrm{Enc}(f, y_{t, 1:F}) &\sim \prod_{k = 1}^K \mathrm{Bernoulli}(\eta_k(s_{t, f}))
+        \end{align}
+    \end{itemize}
+\end{itemize}
+where $a_{t, f}$ represents action of fly $f$ at time $t$, $x_{t, f}$ represents its position, and $s_{1, f}$ represents its mental state.
+We fix the hyperparameters $\mu_{x_1}, \Sigma_{x_1}, \mu_{s_1}, \Sigma_{s_1}, \Sigma_{\text{pos}}, \Sigma_x$ and $\Sigma_s$.
+The likelihood model consists of a likelihood on the position and a likelihood on the encoding of the field of view of each fly.
+The parts of the probabilistic model to be learned are the likelihood neural network $\eta_k$ $(k = 1, \dotsc, k)$ and the policy neural networks $\pi_\alpha^a, \pi_\alpha^x, \pi_\alpha^s$ $(\alpha = 1, \dotsc, A)$.
+
+\paragraph{Encoding of the field of view.}
+For each fly $f$ at position $t$, we calculate the encoding of its field of view as follows.
+Let $r_k$ be a ray starting at the $y_{t, f}$ extending in the direction $(y_{t, f}^{\text{angle}} -\rho / 2 + \rho / k)$ where $y_{t, f}^{\text{angle}}$ is the angle of orientation of the fly and $\rho$ is the field of view angle.
+The $k$th element of $\mathrm{Enc}(f, y_{t, 1:F}) \in \{0, 1\}^K$ is $1$ if there is another fly in the area between $r_{k - 1}$ and $r_k$, and $0$ otherwise.
 
 \section{Discussion}
 
