--- a/paper/icml2018/main.tex
+++ b/paper/icml2018/main.tex
@@ -134,9 +134,9 @@ Given a time series $y_{1:T}$ where $y_t \in \mathbb R^{d_y}$ and $y_t^{\text{po
     \begin{itemize}
         \item For $f$ in $\{1, \dotsc, F\}$:
         \begin{align}
-            a_{t, f} &\sim \mathrm{Categorical}(\pi_{a_{t - 1, f}}^a(s_{t, f})) \\
-            x_{t, f} &\sim \mathrm{Normal}(\pi_{a_{t - 1, f}}^x(s_{t, f}), \Sigma_x) \\
-            s_{t, f} &\sim \mathrm{Normal}(\pi_{a_{t - 1, f}}^s(s_{t, f}, x_{t, f}), \Sigma_s) \\
+            a_{t, f} &\sim \mathrm{Categorical}(\pi_{a_{t - 1, f}}^a(s_{t - 1, f})) \\
+            x_{t, f} &\sim \mathrm{Normal}(\pi_{a_{t - 1, f}}^x(s_{t - 1, f}), \Sigma_x) \\
+            s_{t, f} &\sim \mathrm{Normal}(\pi_{a_{t - 1, f}}^s(s_{t - 1, f}, x_{t - 1, f}), \Sigma_s) \\
             y_{t, f}^{\text{pos}} &\sim \mathrm{Normal}(x_{t, f}, \Sigma_{\text{pos}}) \\
             \mathrm{Enc}(f, y_{t, 1:F}) &\sim \prod_{k = 1}^K \mathrm{Bernoulli}(\eta_k(s_{t, f}))
         \end{align}
