--- a/notes/annealing/annealing.tex
+++ b/notes/annealing/annealing.tex
@@ -96,6 +96,6 @@ This is because the second term in the numerator in \eqref{eq:ess-derivative} ca
 Since $w_i^\alpha w_j^\alpha > 0$, $(\log w_i - \log w_j) > 0$ and $(w_j - w_i) < 0$, \eqref{eq:sum} is $< 0$.
 If all weights are equal, there are no terms in the sum in \eqref{eq:sum} and \eqref{eq:sum} $= 0$.
 Hence $\frac{\partial \mathrm{ESS}(\alpha)}{\partial \alpha} \leq 0$ with equality holding if all weights are equal.
-This means that all weights are equal, $\mathrm{ESS}(\alpha) = K$, otherwise $\mathrm{ESS}(\alpha)$ is decreasing with the maximum at $\mathrm{ESS}(0) = K$ and minimum at $\mathrm{ESS}(1) = 1$.
+This means that if all weights are equal, $\mathrm{ESS}(\alpha) = K$, otherwise $\mathrm{ESS}(\alpha)$ is decreasing with the maximum at $\mathrm{ESS}(0) = K$ and minimum at $\mathrm{ESS}(1) = 1$.
 
 \end{document}
